--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ classifiers = [
 dependencies = [
   "numpy",
   "pandas",
-  "scipy",
+  # "scipy",
+  "scipy>=1.6.1,<=1.11.4",
   "matplotlib",
   "seaborn",
   "plotly",
@@ -42,6 +43,7 @@ dependencies = [
   "patsy",
   "yfinance",
   "arch",
+  "ipykernel",
 ]
 
 [project.urls]
