added script for live class - text mining basics in Python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
   "plotly",
   "scikit-learn",
   "scikit-plot",
+  "nltk",
+  "wordcloud",
   "statsmodels",
   "mlxtend",
   "patsy",
